renomage en index.php et commencement de l'usage de POST au lieu de GET

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </div><link rel="stylesheet" href="./../../component/sing/sing.css">
 <div class="sing">
     <div class="sing-espace"></div>
-    <a class="singin" href="./../../page/singin/singin.php"> Sign IN</a>
-    <a class="singup" href="./../../page/singup/singup.php">Sign UP</a>
+    <a class="singin" href="./../../page/singin"> Sign IN</a>
+    <a class="singup" href="./../../page/singup">Sign UP</a>
 </div>
 <link rel="stylesheet" href="./../../component/login/login.css"/>
 <div class="login">
